# goit_web_HW_7

./: README.md  config.ini  my_select.py  pyproject.toml  seeds.py
conf/: db.py  models.py
migration/: env.py
migration/versions/: 121dcdc7f7b3_init.py  6b01f647cd65_int.py  c3383faee365_init.py
